--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CPShub - A connection center for AEC</title>
     <meta
       name="description"
-      content="Delivering Quality Software Solutions Since 2018"
+      content="A connection center for AEC(Architectural, Engineering & Construction) industry"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/assets/css/base.css" />
