--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
           <div class="col-block process__col" data-item="4" data-aos="fade-up">
             <div class="process__text">
-              <h4>Measured Engagement Philosophy:</h4>
+              <h4>Measured Engagement Philosophy</h4>
               <p>
                 At CPShub, we prioritize a measured approach, avoiding
                 overwhelming tactics like large-scale deployment or a
