--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
           </h1>
           <p>
             A connection center for AEC<br />
-            (Architectural, Engineering & Construction) industry
+            (Architectural, Engineering & Construction) industry<br />
+            Facilitating your growth in the Middle East by connecting you direclty<br />
+            to the decision makers 
           </p>
         </div>
       </div>
@@ -121,7 +123,7 @@
         <div class="col-full">
           <h3 class="subhead">Who We Are</h3>
           <h1 class="display-1">
-            Your Hub for Tailored Construction Solutions in the Dynamic Middle
+            Your Hub to connect to for Tailored Construction Solutions in the Dynamic Middle
             East Market.
           </h1>
         </div>
