--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta
       name="description"
       content="A connection center for AEC(Architectural, Engineering & Construction) industry"
+      content="Facilitating your business growth in the Middel East by connecting you, 1-to-1 with the decision makers"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/assets/css/base.css" />
