--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CPShub - A connection center for AEC</title>
     <meta
       name="description"
-      content="A connection center for AEC(Architectural, Engineering & Construction) industry. Facilitating your business growth in the Middel East by connecting you, 1-to-1 with the decision makers"
+      content="A connection center for AEC(Architectural, Engineering & Construction) industry"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/assets/css/base.css" />
@@ -92,9 +92,7 @@
           </h1>
           <p>
             A connection center for AEC<br />
-            (Architectural, Engineering & Construction) industry<br />
-            Facilitating your growth in the Middle East by connecting you direclty<br />
-            to the decision makers 
+            (Architectural, Engineering & Construction) industry. Facilitating your business growth in the Middel East by bringing you, 1-to-1, with the decision makers<br />
           </p>
         </div>
       </div>
