--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           </h1>
           <p>
             A connection center for AEC<br />
-            (Architectural, Engineering & Construction) industry. Facilitating your business growth in the Middel East by bringing you, 1-to-1, with the decision makers<br />
+            (Architectural, Engineering & Construction) industry. <br />
+            Facilitating your business growth in the Middel East by bringing you, 1-to-1, with the decision makers<br />
           </p>
         </div>
       </div>
