--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p>
             A connection center for AEC<br />
             (Architectural, Engineering & Construction) industry. <br />
-            Facilitating your business growth in the Middel East by bringing you, 1-to-1, with the decision makers<br />
+            Facilitating your business growth in the Middel East by bringing you, face to face, with the right stakeholders<br />
           </p>
         </div>
       </div>
