--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p>
             A connection center for AEC<br />
             (Architectural, Engineering & Construction) industry. <br />
-            Facilitating your business growth in the Middel East by bringing you, face to face, with the right stakeholders.
+            Facilitating your business growth in the Middle East by bringing you, face to face, with the right stakeholders.
           </p>
         </div>
       </div>
@@ -219,11 +219,16 @@
         <div class="col-full">
           <p class="lead">
             Our focus is on personalized, one-on-one support, complemented by
-            the technical prowess of our partner teams. This dynamic blend
-            guarantees optimal results tailored to your specific needs.
+            the technical prowess of suppliers teams. This dynamic blend
+            guarantees optimal results tailored to clients and desingers specific needs.
+            
+            It's important to note that CPS is not just another project or product database
+            competing with existing initiatives. Instead, it optimizes the user experience 
+            by leveraging and referencing all existing data sources, simplifying the process 
+            for users while providing comprehensive solutions across the entire building lifecycle.
+            
             Experience the difference with CPShub - where collaboration meets
-            expertise for a harmonious journey to success. Welcome to a new era
-            of support, welcome to Synergize Success.
+            expertise.
           </p>
         </div>
       </div>
