--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
             competing with existing initiatives. Instead, it optimizes the user experience 
             by leveraging and referencing all existing data sources, simplifying the process 
             for users while providing comprehensive solutions across the entire building lifecycle.
-            Experience the difference with CPShub - where collaboration meets 
-            expertise.
+            Experience the difference with CPShub - where collaboration meets expertise.
           </p>
         </div>
       </div>
