--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           </h1>
           <p>
             | <br />
-            A connection center for AEC<br />
-            (Architectural, Engineering & Construction) industry.<br />
+            A connection center for AEC Industry<br />
+            (Architectural, Engineering & Construction)<br />
             | <br />
             Facilitating your business growth in the Middle East by bringing you, face to face, with the right stakeholders.
           </p>
