--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       <div class="row" data-aos="fade-up">
         <div class="col-full">
           <p class="lead">
+            | <br />
             At CPShub, we recognize the dynamic nature of the construction
             industry, where a myriad of materials and components constantly
             shape its landscape. Keeping pace with the latest advancements is
@@ -142,11 +143,12 @@
             expertise meets innovation.
           </p>
           <p class="lead">
+            | <br />
             Our mission at CPShub is to provide tailored solutions for
-            construction projects by offering a comprehensive range of
+            construction projects by providing access to comprehensive range of
             Construction Products & Solutions. With a keen focus on the unique
             needs of the Middle East market, we bridge the gap between evolving
-            industry demands and the tools required to meet them. Through
+            industry demands and the products and solutions required to meet them. Through
             collaboration and a commitment to excellence, CPShub strives to
             empower construction professionals with the knowledge and resources
             needed to navigate the complexities of the ever-evolving
@@ -173,11 +175,10 @@
             <div class="process__text">
               <h4>Precision in Technical Marketing</h4>
               <p>
-                CPShub focuses on architectural product technical marketing,
+                CPShub focuses on technical marketing,
                 ensuring precision that aligns with international codes and
                 standards. Our approach combines technical expertise with
-                strategic marketing to set new standards in quality and
-                innovation.
+                strategic marketing to set new standards in quality, innovation and compliance.
               </p>
             </div>
           </div>
@@ -186,7 +187,7 @@
               <h4>Global Connections, Sustainable Trust</h4>
               <p>
                 CPShub dedicates itself to establishing connections between the
-                Middle East's AEC industry and global leaders in construction.
+                Middle East's AEC industry and global prodcuts and solution providers.
                 We foster a sustainable business environment built on trust and
                 collaboration.
               </p>
@@ -240,37 +241,35 @@
             <h3 class="h4">Technical Empowerment Sessions</h3>
             <p>
               Enhance collaboration through routine presentations, fostering
-              knowledge exchange between our members and technical teams.
+              knowledge exchange on the letest developments.
             </p>
           </div>
         </div>
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-text">
-            <h3 class="h4">Precision in Writing</h3>
+            <h3 class="h4">Specification Writing support</h3>
             <p>
               Elevate your design with our specification writing services,
-              supported by the technical proficiency of CPShub's Partner teams.
+              supported by the technical proficiency of products and solution providers.
             </p>
           </div>
         </div>
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-text">
-            <h3 class="h4">Industry Immersion</h3>
+            <h3 class="h4">Attend industry or CPShub's organized events</h3>
             <p>
-              Immerse yourself in the latest trends through CPShub's industry
-              events, where exclusive gatherings and detailed event reports
-              await.
+              Immerse yourself in the latest trends through Middle East leading industry
+              events, get detailed event reports as well as attend exclusive gatherings.
             </p>
           </div>
         </div>
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-text">
-            <h3 class="h4">Partnership Beyond Limits</h3>
+            <h3 class="h4">Optimizing Success in the Middle East projects</h3>
             <p>
-              Experience a partnership beyond the ordinary with CPShub, where
-              routine presentations, precise specifications, industry immersion,
-              project insights, and subcontractor prowess converge to create a
-              holistic support ecosystem for unparalleled success.
+              Strategically delve into Middle Eastern projects, comprehending their timelines, 
+              life cycles, and intricacies. Align your customer management plans accordingly to 
+              significantly enhance the likelihood of securing these projects.
             </p>
           </div>
         </div>
@@ -286,11 +285,11 @@
         </div>
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-text">
-            <h3 class="h4">Subcontractor Prowess</h3>
+            <h3 class="h4">Streamlined Project Success with CPShub</h3>
             <p>
-              Secure project success by allowing CPShub to prequalify
-              subcontractors, guaranteeing their suitability for seamless
-              product delivery and installation.
+             Ensure successful delivery on your commitments by leveraging CPShub's prequalified regional specialists and partners. 
+              Our vetted resources guarantee suitability for seamless product delivery and installation, 
+              securing your project's success.
             </p>
           </div>
         </div>
@@ -301,8 +300,9 @@
         <div class="col-full">
           <h3 class="subhead subhead--light">Contact Us</h3>
           <h1 class="display-1 display-1--light">
-            Your Vision, Our Expertise: Contact CPShub and Let's Shape
-            Outstanding Endeavors Together.
+            | <br />
+            Your Vision, Our Expertise: <br />
+            Join the Historic Middle East Construction Renaissance with CPShub's Strategic Support.
           </h1>
         </div>
       </div>
@@ -313,6 +313,7 @@
               <span class="__cf_email__">bilal.ahmad@cpshub.org </span>
             </a>
             <span class="contact-number">+971 585 991199</span>
+            <span class="contact-number">Dubai, United Arab Emirates</span>
           </p>
         </div>
       </div>
