--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               <span class="__cf_email__">bilal.ahmad@cpshub.org </span>
             </a>
             <span class="contact-number">+971 585 991199</span>
-            <span class="contact-number">Dubai, United Arab Emirates</span>
+            <h3 class="subhead subhead--light">Dubai, United Arab Emirates</h3> 
           </p>
         </div>
       </div>
