--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         </div>
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-text">
-            <h3 class="h4">Attend industry or CPShub's organized events</h3>
+            <h3 class="h4">Never miss an Industry event and make use of CPShub Exlusive events</h3>
             <p>
               Immerse yourself in the latest trends through Middle East leading industry
               events, get detailed event reports as well as attend exclusive gatherings.
