--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <h4>Global Connections, Sustainable Trust</h4>
               <p>
                 CPShub dedicates itself to establishing connections between the
-                Middle East's AEC industry and global prodcuts and solution providers.
+                Middle East's AEC industry and global products and solution providers.
                 We foster a sustainable business environment built on trust and
                 collaboration.
               </p>
