--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             | <br />
             Our focus is on personalized, one-on-one support, complemented by
             the technical prowess of suppliers teams. This dynamic blend
-            guarantees optimal results tailored to clients and desingers specific needs. <br />
+            guarantees optimal results tailored to clients and designers specific needs. <br />
             | <br />
             It's important to note that CPS is not just another project or product database
             competing with existing initiatives. Instead, it optimizes the user experience 
@@ -241,7 +241,7 @@
             <h3 class="h4">Technical Empowerment Sessions</h3>
             <p>
               Enhance collaboration through routine presentations, fostering
-              knowledge exchange on the letest developments.
+              knowledge exchange on the lates developments.
             </p>
           </div>
         </div>
@@ -256,7 +256,7 @@
         </div>
         <div class="col-block service-item" data-aos="fade-up">
           <div class="service-text">
-            <h3 class="h4">Never miss an Industry event and make use of CPShub Exlusive events</h3>
+            <h3 class="h4">Never miss an Industry event and make use of CPShub Exclusive events</h3>
             <p>
               Immerse yourself in the latest trends through Middle East leading industry
               events, get detailed event reports as well as attend exclusive gatherings.
