--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
             and Solutions
           </h1>
           <p>
-            | <br />
-            A connection center for AEC Industry<br />
+            <span class="pipe">| </span> A connection center for AEC Industry<br />
             (Architectural, Engineering & Construction)<br />
-            | <br />
-            Facilitating your business growth in the Middle East by bringing you, face to face, with the right stakeholders.
+            <span class="pipe">| </span> Facilitating your business growth in the Middle East by bringing you, face to face, with the right stakeholders.
           </p>
         </div>
       </div>
@@ -132,8 +130,7 @@
       <div class="row" data-aos="fade-up">
         <div class="col-full">
           <p class="lead">
-            | <br />
-            At CPShub, we recognize the dynamic nature of the construction
+            <span class="pipe">| </span> At CPShub, we recognize the dynamic nature of the construction
             industry, where a myriad of materials and components constantly
             shape its landscape. Keeping pace with the latest advancements is
             essential to meet precise design objectives, and we understand the
@@ -143,8 +140,7 @@
             expertise meets innovation.
           </p>
           <p class="lead">
-            | <br />
-            Our mission at CPShub is to provide tailored solutions for
+            <span class="pipe">| </span> Our mission at CPShub is to provide tailored solutions for
             construction projects by providing access to comprehensive range of
             Construction Products & Solutions. With a keen focus on the unique
             needs of the Middle East market, we bridge the gap between evolving
@@ -221,17 +217,14 @@
       <div class="row" data-aos="fade-up">
         <div class="col-full">
           <p class="lead">
-            | <br />
-            Our focus is on personalized, one-on-one support, complemented by
+            <span class="pipe">| </span> Our focus is on personalized, one-on-one support, complemented by
             the technical prowess of suppliers teams. This dynamic blend
             guarantees optimal results tailored to clients and designers specific needs. <br />
-            | <br />
-            It's important to note that CPS is not just another project or product database
+            <span class="pipe">| </span> It's important to note that CPS is not just another project or product database
             competing with existing initiatives. Instead, it optimizes the user experience 
             by leveraging and referencing all existing data sources, simplifying the process 
             for users while providing comprehensive solutions across the entire building lifecycle. <br />
-            | <br />
-            Experience the difference with CPShub - where collaboration meets expertise. <br />
+            <span class="pipe">| </span> Experience the difference with CPShub - where collaboration meets expertise. <br />
           </p>
         </div>
       </div>
@@ -300,8 +293,7 @@
         <div class="col-full">
           <h3 class="subhead subhead--light">Contact Us</h3>
           <h1 class="display-1 display-1--light">
-            | <br />
-            Your Vision, Our Expertise: <br />
+            <span class="pipe">| </span> Your Vision, Our Expertise: <br />
             Join the Historic Middle East Construction Renaissance with CPShub's Strategic Support.
           </h1>
         </div>
