--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       content="A connection center for AEC(Architectural, Engineering & Construction) industry"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/base.css" />
     <link rel="stylesheet" href="/assets/css/vendor.css" />
     <link rel="stylesheet" href="/assets/css/main.css" />
