--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <span class="__cf_email__">bilal.ahmad@cpshub.org </span>
             </a>
             <span class="contact-number">+971 585 991199</span>
-            <h3 class="subhead subhead--light">Dubai, United Arab Emirates</h3> 
+            <h3 class="subhead subhead--light address">Dubai, United Arab Emirates</h3> 
           </p>
         </div>
       </div>
