--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
             <a href="mailto:bilal.ahmad@cpshub.org" class="contact-email">
               <span class="__cf_email__">bilal.ahmad@cpshub.org </span>
             </a>
-            <span class="contact-number">+971 585 991199</span>
-            <h3 class="subhead subhead--light address">Dubai, United Arab Emirates</h3> 
+            <span class="contact-number">+971 585 991199</span><br/>
+            <span class="address">Dubai, United Arab Emirates</span> 
           </p>
         </div>
       </div>
