--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             and Solutions
           </h1>
           <p>
-            <span class="pipe">| </span> A connection center for AEC Industry<br />
-            (Architectural, Engineering & Construction)<br />
+            <span class="pipe">| </span> A connection center for AEC<br />
+            (Architectural, Engineering & Construction) Industry<br />
             <span class="pipe">| </span> Facilitating your business growth in the Middle East by bringing you, face to face, with the right stakeholders.
           </p>
         </div>
