--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>CPShub - A connection center for AEC</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWTFJLC184"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-GWTFJLC184');
+    </script>
     <meta
       name="description"
       content="A connection center for AEC(Architectural, Engineering & Construction) industry"
