--- a/index.html
+++ b/index.html
@@ -324,8 +324,8 @@
       <div class="row">
         <div class="col-full contact-main" data-aos="fade-up">
           <p>
-            <a href="mailto:bilal.ahmad@cpshub.org" class="contact-email">
-              <span class="__cf_email__">bilal.ahmad@cpshub.org </span>
+            <a href="mailto:bilal.ahmad@cpshub.com" class="contact-email">
+              <span class="__cf_email__">bilal.ahmad@cpshub.com</span>
             </a>
             <span class="contact-number">+971 585 991199</span><br/>
             <span class="address">Dubai, United Arab Emirates</span> 
